--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,36 @@ html{
     background-color: rgba(252, 211, 77, 1);
 }
 
+/* Borders */
+
+.blue-border{
+    border-color: rgba(29, 78, 216, 1);
+}
+
+.green-border{
+    border-color: rgba(4, 120, 87, 1);
+}
+
+.grey-border{
+    border-color: rgba(107, 114, 128, 1);
+}
+
+.lightblue-border{
+    border-color: rgba(147, 197, 253, 1);
+}
+
+.orange-border{
+    border-color: rgba(245, 158, 11, 1);
+}
+
+.pink-border{
+    border-color: rgba(236, 72, 153, 1);
+}
+
+.yellow-border{
+    border-color: rgba(252, 211, 77, 1);
+}
+
 @keyframes fadeIn {
     0% {
       opacity: 0;
